; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/replication/logical/extr_logical.c_CheckLogicalDecodingRequirements.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/replication/logical/extr_logical.c_CheckLogicalDecodingRequirements.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@wal_level = common dso_local global i64 0, align 8
@WAL_LEVEL_LOGICAL = common dso_local global i64 0, align 8
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_OBJECT_NOT_IN_PREREQUISITE_STATE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [47 x i8] c"logical decoding requires wal_level >= logical\00", align 1
@MyDatabaseId = common dso_local global i64 0, align 8
@InvalidOid = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [48 x i8] c"logical decoding requires a database connection\00", align 1
@ERRCODE_FEATURE_NOT_SUPPORTED = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [50 x i8] c"logical decoding cannot be used while in recovery\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CheckLogicalDecodingRequirements() #0 {
  %1 = call i32 (...) @CheckSlotRequirements()
  %2 = load i64, i64* @wal_level, align 8
  %3 = load i64, i64* @WAL_LEVEL_LOGICAL, align 8
  %4 = icmp slt i64 %2, %3
  br i1 %4, label %5, label %11

5:                                                ; preds = %0
  %6 = load i32, i32* @ERROR, align 4
  %7 = load i32, i32* @ERRCODE_OBJECT_NOT_IN_PREREQUISITE_STATE, align 4
  %8 = call i32 @errcode(i32 %7)
  %9 = call i32 @errmsg(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0))
  %10 = call i32 @ereport(i32 %6, i32 %9)
  br label %11

11:                                               ; preds = %5, %0
  %12 = load i64, i64* @MyDatabaseId, align 8
  %13 = load i64, i64* @InvalidOid, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %21

15:                                               ; preds = %11
  %16 = load i32, i32* @ERROR, align 4
  %17 = load i32, i32* @ERRCODE_OBJECT_NOT_IN_PREREQUISITE_STATE, align 4
  %18 = call i32 @errcode(i32 %17)
  %19 = call i32 @errmsg(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.1, i64 0, i64 0))
  %20 = call i32 @ereport(i32 %16, i32 %19)
  br label %21

21:                                               ; preds = %15, %11
  %22 = call i64 (...) @RecoveryInProgress()
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %30

24:                                               ; preds = %21
  %25 = load i32, i32* @ERROR, align 4
  %26 = load i32, i32* @ERRCODE_FEATURE_NOT_SUPPORTED, align 4
  %27 = call i32 @errcode(i32 %26)
  %28 = call i32 @errmsg(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.2, i64 0, i64 0))
  %29 = call i32 @ereport(i32 %25, i32 %28)
  br label %30

30:                                               ; preds = %24, %21
  ret void
}

declare dso_local i32 @CheckSlotRequirements(...) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*) #1

declare dso_local i64 @RecoveryInProgress(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
